# cribl-hc

./: ._requirements.txt  .agent_spec_context.md  .agentignore  .dockerignore  .editorconfig  .gitignore  API_PHASE1_COMPLETE.md  BATCH_1_SUMMARY.md  BATCH_2_POLISH_SUMMARY.md  BATCH_2_SUMMARY.md  CLAUDE.md  CLEAN_CONFIG_FEATURE.md  CONTRIBUTING.md  CREDENTIAL_MANAGEMENT.md  CREDENTIAL_STORAGE_IMPLEMENTATION.md  DEBUG_MODE_IMPLEMENTATION_SUMMARY.md  DEBUG_MODE_USAGE.md  DOCKER_IMPLEMENTATION.md  Dockerfile  EDGE_TEST_SUMMARY.md  ENHANCEMENTS_PRODUCT_TAGS_SORTING.md  FRONTEND_IMPROVEMENTS.md  HEALTH_ANALYZER_ENHANCEMENTS.md  LICENSE  MVP_COMPLETION_SUMMARY.md  Makefile  OAUTH_AND_TUI_UPDATES.md  OAUTH_AUTHENTICATION_SUPPORT.md  PERFORMANCE_VALIDATION.md  PHASE_2A_COMPLETION.md  PHASE_2_FRONTEND_COMPLETE.md  PR_REVIEW.md  QA_REPORT.md  QUICK_START_TESTING.md  README.md  RELEASING.md  ROADMAP.md  SESSION_SUMMARY.md  SUMMARY.md  TAURI_SETUP.md  (+25 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  ci.yml
.specify/memory/: constitution.md
docs/: API_INTEGRATION_TEMPLATE.md  API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES_RULES.md  CLI_GUIDE.md  CLI_QUICK_REFERENCE.md  CORE_API_RESEARCH.md  DOCKER_GUIDE.md  FRONTEND_ARCHITECTURE.md  FUTURE_FEATURES.md  GETTING_STARTED.md  LAKE_SEARCH_API_RESEARCH.md  PHASE1_CLI_COMPLETE.md  PRODUCT_COMPATIBILITY.md  README.md  USER_GUIDE.md  WEB_GUI_QUICKSTART.md  connection-testing.md  cribl_cloud_api_notes.md
docs/development/: EDGE_API_MAPPING.md  GUI_IMPLEMENTATION_PLAN.md  PHASE_2_PREPARATION_COMPLETE.md  cribl_cloud_api_notes.md  default_report.md
docs/plans/: resource_analyzer_plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  test-import.ts  test-types.ts
frontend/src/api/: analysis.ts  analyzers.ts  client.ts  credentials.ts  system.ts  types-new.ts  types.ts
frontend/src/hooks/: index.ts  (+1 more)
scripts/: api_discovery_sandbox_20251228_162443.json  api_discovery_sandbox_20251228_162622.json  api_discovery_sandbox_20251228_163832.json  build_spec_context.sh  debug_worker_data.py  demo_cli.sh  discover_api_endpoints.py  discover_cloud_api.py  discover_sandbox_api.py  discover_search_ui_endpoints.py  discovery_output.txt  explore_api_structure.py  explore_cloud_metrics.py  inspect_pipelines.py  inspect_search_endpoints.py  lake_endpoints_inspection.json  search_discovery_detailed.json  search_discovery_detailed.txt  search_endpoints_inspection.json  test_lake_endpoint.py  test_real_deployment.py  test_resource_analyzer.py  validate_performance.py
specs/001-health-check-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/cribl_hc/: __init__.py  py.typed
tests/: __init__.py  conftest.py  helpers.py
tests/contract/: test_cribl_api.py  test_edge_api_contracts.py
tests/integration/: test_api_analysis.py  test_api_analyzers.py  test_api_client.py  test_api_credentials.py  test_config_analyzer.py  test_connection_workflow.py  test_core_api_endpoints.py  test_cribl_api_contracts.py  test_edge_integration.py  test_end_to_end.py  test_health_analysis.py  test_health_analyzer.py  test_orchestrator.py
tests/unit/: test_health_scorer.py  test_product_detection.py  test_report_generator.py
(+138 files in other folders)
